[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/turret.png" type="Texture" id=1]
[ext_resource path="res://entities/Turret.gd" type="Script" id=2]
[ext_resource path="res://items/ProjectileTurret.tscn" type="PackedScene" id=3]

[node name="Turret" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )
projectile_scene = ExtResource( 3 )

[node name="TurretPosition" type="Position2D" parent="."]
position = Vector2( 0, 25 )

[node name="Timer" type="Timer" parent="."]

[node name="TurretMapLocation" type="Position2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
